# loobric-smooth

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: CLI.md  IMPORTERS_PLAN.md  SANDBOX.md
docs/adr/: 0001-extract-loobric-smooth.md  0001-extract-smooth-client.md
examples/: quickstart.sh
smooth_client/: __init__.py  client.py  errors.py  transport.py
smooth_client/cli/: __init__.py  main.py
smooth_client/importers/: __init__.py  _util.py  base.py  gtc.py  hypermill.py  p21.py  run.py  solidcam.py
smooth_client/importers/din4000/: __init__.py  _codes.py  _csv.py  _xml.py
tests/: test_cli.py  test_client_smoke.py  test_importers_camxml.py  test_importers_din4000.py  test_importers_iso13399.py
tests/fixtures/importers/: din4000-82.csv  din4000-82_2013.xml  din4000-82_2016.xml  hypermill.xml  iso13399.p21  solidcam.xml
